# xserver

./: .appveyor.yml  .travis.yml  Makefile.am  configure.ac  meson.build  meson_options.txt
.travis/: build-osx.sh  osx-modules
Xext/: dpmsproc.h  geext.h  hashtable.h  panoramiX.c  panoramiXprocs.c  panoramiXsrv.h  saver.c  shape.c  shm.c  shmint.h  syncsdk.h  xace.c  xace.h  xres.c  xvdix.h  xvmcext.h
Xi/: exevents.c  xibarriers.h  xiproperty.c
composite/: compext.c  compositeext.h  compwindow.c
dbe/: dbe.c
dix/: colormap.c  dispatch.c  events.c  extension.c  gc.c  grabs.c  inpututils.c  privates.c  property.c  resource.c  window.c
doc/: c-extensions
dri3/: dri3.h  dri3_request.c  dri3_screen.c
exa/: exa.c  exa.h  exa_priv.h
fb/: Makefile.am  fb.h  fbarc.c  fbarcbits.h  fbbits.c  fbbits.h  fbblt.c  fbcmap_mi.c  fbcopy.c  fbdotbits.h  fbgc.c  fboverlay.h  fbpict.h  fbpoint.c  fbrop.h  fbscreen.c  fbseg.c  fbsegbits.h  wfbrename.h
glamor/: glamor.c  glamor.h  glamor_composite_glyphs.c  glamor_core.c  glamor_egl.c  glamor_eglmodule.c  glamor_fbo.c  glamor_image.c  glamor_priv.h
glx/: Makefile.am  createcontext.c  glxcmds.c  glxcmdsswap.c  glxdri2.c  glxdriswrast.c  glxext.c  glxext.h  glxscreens.c  glxscreens.h  indirect_dispatch.c  indirect_dispatch.h  indirect_dispatch_swap.c  indirect_reqsize.c  indirect_reqsize.h  indirect_size.h  indirect_size_get.c  indirect_table.c  meson.build  vnd_dispatch_stubs.c  vndcmds.c  vndext.c  vndserver.h  vndservermapping.c
hw/dmx/: Makefile.am  dmx.h  dmxcursor.c  dmxcursor.h  dmxdpms.c  dmxdpms.h  dmxextension.c  dmxgc.c  dmxgc.h  dmxinit.c  dmxlog.c  dmxlog.h  dmxpict.c  dmxpict.h  dmxscrinit.c  dmxwindow.c
hw/dmx/config/: Canvas.c  CanvasP.h  dmxconfig.c  dmxparse.c  dmxparse.h  parser.y
hw/dmx/glxProxy/: glxcmds.c
hw/dmx/input/: Makefile.am  dmxarg.c  dmxarg.h  dmxcommon.c  dmxcommon.h  dmxevents.c  dmxinputinit.c  dmxinputinit.h  dmxmap.c  dmxmap.h
hw/kdrive/ephyr/: Makefile.am  ephyr.c  ephyrdriext.c  ephyrinit.c
hw/kdrive/fake/: Makefile.am
hw/kdrive/fbdev/: Makefile.am  fbdev.c
hw/kdrive/linux/: linux.c
hw/kdrive/src/: kcmap.c  kdrive.c  kdrive.h  kinfo.c  kinput.c  kmode.c  kxv.c
hw/vfb/: InitOutput.c  meson.build
hw/xfree86/: Makefile.am  meson.build  sdksyms.sh
hw/xfree86/common/: Makefile.am  compiler.h  xf86.h  xf86Bus.c  xf86Config.c  xf86Config.h  xf86Configure.c  xf86Events.c  xf86Extensions.h  xf86Globals.c  xf86Helper.c  xf86Init.c  xf86Mode.c  xf86Module.h  xf86Opt.h  xf86Option.c  xf86PM.c  xf86Priv.h  xf86Privstr.h  xf86VGAarbiter.c  xf86VGAarbiter.h  xf86VGAarbiterPriv.h  xf86VidMode.c  xf86Xinput.h  xf86cmap.h  xf86fbman.h  xf86pciBus.c  xf86platformBus.h  xf86sbusBus.h  xf86str.h  xf86xv.h  xf86xvmc.h  xf86xvpriv.h  xisb.h
hw/xfree86/ddc/: DDC.HOWTO  Makefile.am  ddc.c  edid.h  xf86DDC.h
hw/xfree86/dixmods/: Makefile.am  fbmodule.c  glxmodule.c  shmodule.c
hw/xfree86/doc/: ddxDesign.xml
hw/xfree86/dri/: dri.h
hw/xfree86/dri2/: dri2.h
hw/xfree86/exa/: examodule.c
hw/xfree86/fbdevhw/: fbdevhw.c  fbdevhw.h  fbdevhwstub.c
hw/xfree86/i2c/: xf86i2c.h
hw/xfree86/int10/: xf86int10.h  xf86int10module.c
hw/xfree86/loader/: loader.c  loadmod.c
hw/xfree86/man/: Xorg.man  xorg.conf.man
hw/xfree86/modes/: xf86Crtc.c  xf86Crtc.h  xf86DiDGA.c  xf86Modes.c  xf86Modes.h  (+1 more)
hw/xnest/: Color.c  GC.c  Init.c  Keyboard.c  Makefile.am  Screen.c  Window.c
hw/xquartz/: darwin.c
hw/xwayland/: Makefile.am  meson.build  xwayland-glamor-eglstream.c  xwayland-glamor-gbm.c  xwayland-glamor.c  xwayland-input.c  xwayland.c  xwayland.h
hw/xwin/: InitOutput.c  win.h  winclipboardinit.c  winerror.c  winmultiwindowclass.c  winmultiwindowwm.c  winprocarg.c  winscrinit.c  winwin32rootlesswndproc.c
include/: XIstubs.h  Xprintf.h  callback.h  client.h  colormap.h  cursor.h  dix-config.h.in  dix.h  dixevents.h  dixfont.h  dixgrabs.h  dixstruct.h  eventconvert.h  exevents.h  extension.h  extinit.h  extnsionst.h  gc.h  gcstruct.h  globals.h  glx_extinit.h  glxvndabi.h  hotplug.h  input.h  inputstr.h  meson.build  misc.h  nonsdk_extinit.h  opaque.h  os.h  pixmap.h  privates.h  property.h  ptrveloc.h  regionstr.h  registry.h  resource.h  screenint.h  scrnintstr.h  selection.h  (+6 more)
mi/: mi.h  mibitblt.c  micmap.h  migc.c  migc.h  miline.h  mioverlay.h  mipointer.h  miscrinit.c  mizerarc.h
miext/damage/: damage.c  damage.h  damagestr.h
miext/rootless/: rootlessCommon.h  rootlessGC.c
miext/shadow/: Makefile.am  shadow.h
miext/sync/: misync.h  misyncfd.c  misyncfd.h  misyncshm.c  misyncshm.h
os/: log.c  meson.build  osinit.c  xstrans.c
present/: present.c  present.h  presentext.h
pseudoramiX/: pseudoramiX.c  pseudoramiX.h
randr/: randrstr.h  rrprovider.c  rrtransform.h
render/: glyphstr.h  mipict.h  mirect.c  picture.c  picturestr.h
test/: Makefile.am  meson.build  misc.c  xkb.c
test/scripts/: build-appveyor.sh  build-travis-deps.sh  build-travis-osx.sh
test/xi2/: protocol-common.c
xfixes/: cursor.c  region.c
xkb/: Makefile.am  XKBAlloc.c  XKBGAlloc.c  XKBMAlloc.c  ddxLoad.c  xkb.c  xkbActions.c  xkbEvents.c  xkbInit.c  xkbLEDs.c  xkbUtils.c  xkbfmisc.c  xkbgeom.h  xkbout.c  xkbtext.c  xkmread.c
(+48 files in other folders)
