XORG_INDENT_FLAGS = -linux -bad -bap -blf -bli0 -cbi0 -cdw -nce -cs -i4 -lc80 -psl -nbbo \
    -nbc -psl -nbfda -nut -nss -T pointer -T ScreenPtr -T ScrnInfoPtr -T pointer \
    -T DeviceIntPtr -T DevicePtr -T ClientPtr -T CallbackListPtr \
    -T CallbackProcPtr -T OsTimerPtr -T CARD32 -T CARD16 -T CARD8 \
    -T INT32 -T INT16 -T INT8 -T Atom -T Time -T WindowPtr -T DrawablePtr \
    -T PixmapPtr -T ColormapPtr -T CursorPtr -T Font -T XID -T Mask \
    -T BlockHandlerProcPtr -T WakeupHandlerProcPtr -T RegionPtr \
    -T InternalEvent -T GrabPtr -T Timestamp -T Bool -T TimeStamp \
    -T xEvent -T DeviceEvent -T RawDeviceEvent -T GrabMask -T Window \
    -T Drawable -T FontPtr -T CallbackPtr -T XIPropertyValuePtr \
    -T GrabParameters -T deviceKeyButtonPointer -T TouchOwnershipEvent \
    -T xGenericEvent -T DeviceChangedEvent -T GCPtr -T BITS32 \
    -T xRectangle -T BoxPtr -T RegionRec -T ValuatorMask -T KeyCode \
    -T KeySymsPtr -T XkbDescPtr -T InputOption -T XI2Mask -T DevUnion \
    -T DevPrivateKey -T DevScreenPrivateKey -T PropertyPtr -T RESTYPE \
    -T XkbAction -T XkbChangesPtr -T XkbControlsPtr -T PrivatePtr -T pmWait \
    -T _XFUNCPROTOBEGIN -T _XFUNCPROTOEND -T _X_EXPORT

INDENT = indent

if DRI2
GLXDRI_LIBRARY = libglxdri.la
endif

noinst_LTLIBRARIES = libglx.la $(GLXDRI_LIBRARY)

AM_CFLAGS = \
	@DIX_CFLAGS@ \
	@GL_CFLAGS@ \
	@XLIB_CFLAGS@ \
	@LIBDRM_CFLAGS@ \
	@GLX_DEFINES@ \
	@GLX_ARCH_DEFINES@

# none yet
#sdk_HEADERS =

AM_CPPFLAGS = \
	-I$(top_srcdir)/hw/xfree86/os-support \
	-I$(top_srcdir)/hw/xfree86/os-support/bus \
	-I$(top_srcdir)/hw/xfree86/common \
	-I$(top_srcdir)/hw/xfree86/dri \
	-I$(top_srcdir)/hw/xfree86/dri2 \
	-I$(top_srcdir)/mi \
	-I$(top_srcdir)/present

# Generated by the scripts under glx/gen/

indirect_headers = \
	indirect_dispatch.h			\
	indirect_reqsize.h			\
	indirect_size.h				\
	indirect_size_get.h

indirect_sources =				\
	indirect_dispatch.c			\
	indirect_dispatch_swap.c		\
	indirect_reqsize.c			\
	indirect_size_get.c			\
	indirect_table.c

gen = $(srcdir)/gen
GEN = $(AM_V_GEN)$(PYTHON2) $(PYTHON_FLAGS)

# ensure headers are built before the sources that depend on them
$(indirect_sources): $(indirect_headers)

indirect_dispatch.c: $(gen)/glX_proto_recv.py
	$(GEN) $< -f $(gen)/gl_API.xml -m dispatch_c \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_dispatch_swap.c: $(gen)/glX_proto_recv.py
	$(GEN) $< -f $(gen)/gl_API.xml -m dispatch_c -s \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_dispatch.h: $(gen)/glX_proto_recv.py
	$(GEN) $< -f $(gen)/gl_and_glX_API.xml -m dispatch_h -s \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_size.h: $(gen)/glX_proto_size.py
	$(GEN) $< -f $(gen)/gl_API.xml -m size_h --only-set \
	    --header-tag _INDIRECT_SIZE_H_ \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_size_get.c: $(gen)/glX_proto_size.py
	$(GEN) $< -f $(gen)/gl_API.xml -m size_c \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_size_get.h: $(gen)/glX_proto_size.py
	$(GEN) $< -f $(gen)/gl_API.xml -m size_h \
	    --only-get --header-tag _INDIRECT_SIZE_GET_H_ \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_reqsize.c: $(gen)/glX_proto_size.py
	$(GEN) $< -f $(gen)/gl_API.xml -m reqsize_c \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_reqsize.h: $(gen)/glX_proto_size.py
	$(GEN) $< -f $(gen)/gl_API.xml -m reqsize_h \
	    --only-get --header-tag _INDIRECT_SIZE_GET_H_ \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

indirect_table.c: $(gen)/glX_server_table.py
	$(GEN) $< -f $(gen)/gl_and_glX_API.xml \
	    | $(INDENT) $(XORG_INDENT_FLAGS) > $@

genclean:
	rm -f $(indirect_sources) $(indirect_headers)

libglxdri_la_SOURCES =
if DRI2
libglxdri_la_SOURCES += glxdri2.c
endif

libglxdri_la_LIBADD = $(DLOPEN_LIBS)

libglx_la_SOURCES = \
	$(indirect_headers) \
	$(indirect_sources) \
	clientinfo.c \
	createcontext.c \
	extension_string.c \
	extension_string.h \
	indirect_util.c \
	indirect_util.h \
	indirect_program.c \
	indirect_table.h \
	indirect_texture_compression.c \
        glxbyteorder.h \
        glxcmds.c \
        glxcmdsswap.c \
        glxcontext.h \
        glxdrawable.h \
        glxext.c \
        glxext.h \
	glxdriswrast.c \
	glxdricommon.c \
	glxdricommon.h \
        glxscreens.c \
        glxscreens.h \
        glxserver.h \
        glxutil.h \
        render2.c \
        render2swap.c \
        renderpix.c \
        renderpixswap.c \
        rensize.c \
        single2.c \
        single2swap.c \
        singlepix.c \
        singlepixswap.c \
        singlesize.c \
        singlesize.h \
        swap_interval.c \
        unpack.h \
        xfont.c

libglx_la_LIBADD = $(DLOPEN_LIBS)
